Try new jvm options